--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@ html {
 }
 
 h1,
-p {
+p,
+h2 {
   color: #fee2b4;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Menu overview */
@@ -25,6 +30,7 @@ p {
 .namePage img {
   width: 400px;
   margin-left: 100px;
+  position: relative;
 }
 
 .nameFlexBox {
@@ -35,13 +41,14 @@ p {
   width: 100%;
 
   font-size: 125px;
-  height: 100%;
+  height: 50vh;
+  margin-top: -50px;
 }
 
 .myName {
   margin-left: -400px;
   font-weight: 800;
-  text-shadow: -10px -10px white, -10px -10px black;
+  /* text-shadow: -10px -10px white, -10px -10px black; */
 }
 
 .mySurname {
@@ -61,4 +68,127 @@ p {
 
 .prof {
   margin-top: -10px;
+}
+
+/* About me SECTION */
+.aboutPage {
+  position: relative;
+  top: 20vh;
+  height: 100vh;
+}
+
+.sectionName {
+  font-size: 125px;
+  font-weight: 800;
+}
+
+.HCorrection {
+  margin-top: -100px;
+}
+
+.aboutFlexBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 10%;
+  margin-top: 200px;
+}
+
+.aboutFlexBox p {
+  max-width: 45%;
+  font-size: 36px;
+  text-align: justify;
+}
+
+.aboutFlexBox img {
+  width: 15%;
+  box-shadow: 10px 10px #e7cda3;
+  border-radius: 0 30px 0 30px;
+}
+
+/* Portfolio Section */
+.portfolioPage {
+  position: relative;
+  top: 20vh;
+  height: 100vh;
+}
+
+.titleRight {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+}
+
+.skillsPage {
+  position: relative;
+  top: 20vh;
+  height: 100vh;
+}
+
+ul {
+  color: #fee2b4;
+  font-size: 36px;
+  /* font-weight: 400; */
+
+  display: flex;
+  /* justify-content: flex-end; */
+  align-items: flex-end;
+  flex-direction: column;
+  width: 90%;
+
+  letter-spacing: 0.2rem;
+}
+
+.hobbyPage {
+  position: relative;
+  top: 20vh;
+  height: 100vh;
+}
+
+.hobbyDescription {
+  font-size: 36px;
+  letter-spacing: 0.2rem;
+
+  max-width: 50vw;
+  text-align: justify;
+  margin-left: 3em;
+  margin-top: 10%;
+}
+
+h2 {
+  font-size: 90px;
+  max-width: 13em;
+  text-align: justify;
+}
+
+.constactDescription {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.hCenter {
+  align-self: center;
+  justify-self: center;
+}
+
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+
+.cvSection {
+  display: flex;
+  justify-content: space-between;
+  font-size: 24px;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+}
+
+.cvSection h1 {
+  font-weight: 900;
+  margin: 0 1.5rem 0 1.5rem;
 }
