--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 html {
   font-family: "Golos Text", sans-serif;
   font-optical-sizing: auto;
-  /* background-color: black; */
-  background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
+  background-color: black;
+  /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
 
 h1,
@@ -24,14 +24,31 @@ a {
   margin-right: 200px;
 }
 
-.menu p {
+.btn-7 {
   font-size: 24px;
+  width: fit-content;
+  position: relative;
+}
+
+.btn-7:before {
+  content: "";
+  position: absolute;
+  height: 0;
+  width: 100%;
+  background: #fff;
+  transition: all 0.3s;
+  opacity: 0.3;
+}
+
+.btn-7:hover:before {
+  height: 100%;
 }
 
 .namePage img {
   width: 400px;
   margin-left: 100px;
   position: relative;
+  /* opacity: 0.5; */
 }
 
 .nameFlexBox {
@@ -69,6 +86,53 @@ a {
   margin-right: 200px;
 
   font-size: 30px;
+  overflow: hidden;
+}
+
+#flip {
+  height: 50px;
+  overflow: hidden;
+}
+
+#flip > div > div {
+  color: black;
+  padding: 4px 12px;
+  height: 45px;
+  margin-bottom: 45px;
+  display: inline-block;
+}
+
+#flip div:first-child {
+  animation: show 8s linear infinite;
+}
+
+#flip div:first-child div {
+  background: #fee2b4;
+}
+#flip div:last-child div {
+  background: #fee2b4;
+}
+
+@keyframes show {
+  0% {
+    margin-top: 0px;
+  }
+
+  35% {
+    margin-top: 0px;
+  }
+
+  45% {
+    margin-top: -90px;
+  }
+
+  85% {
+    margin-top: -90px;
+  }
+
+  95% {
+    margin-top: 0px;
+  }
 }
 
 .prof {
@@ -80,8 +144,6 @@ a {
   position: relative;
   top: 20vh;
   height: 100vh;
-  background-image: linear-gradient(224deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
-  /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
 
 .sectionName {
@@ -112,13 +174,13 @@ a {
   width: 15%;
   border-radius: 0 30px 0 30px;
 }
+/* //////////////////////////////////// */
 
 /* Portfolio Section */
 .portfolioPage {
   position: relative;
   top: 20vh;
   height: 100vh;
-  background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
 }
 
 .titleRight {
@@ -131,9 +193,77 @@ a {
   position: relative;
   top: 20vh;
   height: 100vh;
-  background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
 }
 
+/* //////////////////////////////////////////////////////////////////// */
+.tag-list {
+  width: 70%;
+  max-width: 100%;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  gap: 1rem 0;
+  position: relative;
+  padding: 1.5rem 0;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.loop-slider {
+  .inner {
+    display: flex;
+    width: fit-content;
+    animation-name: loop;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: var(--direction);
+    animation-duration: var(--duration);
+    margin-right: 20px;
+  }
+}
+
+.tag {
+  display: flex;
+  align-items: center;
+  gap: 0 0.2rem;
+  color: black;
+  font-size: 36px;
+  background-color: #fee2b4;
+  border-radius: 0.4rem;
+  padding: 0.7rem 1rem;
+  margin-right: 1rem;
+  /* // Must used margin-right instead of gap for the loop to be smooth */
+  box-shadow: 0 0.1rem 0.2rem rgb(0 0 0 / 20%), 0 0.1rem 0.5rem rgb(0 0 0 / 30%),
+    0 0.2rem 1.5rem rgb(0 0 0 / 40%);
+
+  span {
+    font-size: 36px;
+    color: black;
+  }
+}
+
+.fade {
+  pointer-events: none;
+  background: linear-gradient(
+    90deg,
+    #1e293b,
+    transparent 30%,
+    transparent 70%,
+    #1e293b
+  );
+  position: absolute;
+  inset: 0;
+}
+
+@keyframes loop {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+/* //////////////////////////////////////////////////////////////////// */
 ul {
   color: #fee2b4;
   font-size: 36px;
@@ -152,7 +282,6 @@ ul {
   position: relative;
   top: 20vh;
   height: 100vh;
-  background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
 }
 
 .hobbyDescription {
@@ -176,7 +305,7 @@ h2 {
   position: relative;
   top: 20vh;
   height: 100vh;
-  background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%);
+  /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
 
 .constactDescription {
