--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a {
 
 .namePage img {
   width: 400px;
-  margin-left: 100px;
+  /* margin-left: 100px; */
   position: relative;
   /* opacity: 0.5; */
 }
@@ -63,8 +63,20 @@ a {
   margin-top: -50px;
 }
 
-.nameFlexBox img {
+.nameFlexBox > img {
   width: 1200px;
+}
+
+.logoHere {
+  padding: 1px; /* Adjust to change the thickness of the gradient border */
+  /* background-image: radial-gradient(circle, #fee2b4, #feb47b); */
+  box-shadow: 0 0 20px rgba(255, 126, 95, 0.6),
+    /* Outer glow */ 0 0 40px rgba(254, 180, 123, 0.4),
+    /* Medium glow */ 0 0 60px rgba(255, 126, 95, 0.3); /* Inner glow */
+  border-radius: 50%; /* Makes the gradient circular */
+  width: 400px;
+  height: 400px;
+  margin-left: 100px;
 }
 
 .myName {
@@ -206,7 +218,7 @@ a {
   position: relative;
   padding: 1.5rem 0;
   overflow: hidden;
-  margin-right: 20px;
+  margin-left: 30%;
 }
 
 .loop-slider {
@@ -225,12 +237,12 @@ a {
 .tag {
   display: flex;
   align-items: center;
-  gap: 0 0.2rem;
+  gap: 0 0.3rem;
   color: black;
   font-size: 36px;
   background-color: #fee2b4;
-  border-radius: 0.4rem;
-  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+  padding: 0.9rem 1rem;
   margin-right: 1rem;
   /* // Must used margin-right instead of gap for the loop to be smooth */
   box-shadow: 0 0.1rem 0.2rem rgb(0 0 0 / 20%), 0 0.1rem 0.5rem rgb(0 0 0 / 30%),
@@ -246,10 +258,10 @@ a {
   pointer-events: none;
   background: linear-gradient(
     90deg,
-    #1e293b,
-    transparent 30%,
-    transparent 70%,
-    #1e293b
+    #fee2b4,
+    transparent 5%,
+    transparent 95%,
+    #fee2b4
   );
   position: absolute;
   inset: 0;
