--- a/style.css
+++ b/style.css
@@ -185,6 +185,9 @@ a {
 .aboutFlexBox img {
   width: 15%;
   border-radius: 0 30px 0 30px;
+  box-shadow: 0 0 20px rgba(254, 168, 87, 0.6),
+    /* Outer glow */ 0 0 40px rgba(254, 180, 123, 0.4),
+    /* Medium glow */ 0 0 60px rgba(213, 149, 59, 0.3);
 }
 /* //////////////////////////////////// */
 
