--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
   font-family: "Golos Text", sans-serif;
   font-optical-sizing: auto;
   background-color: black;
+  scroll-behavior: smooth;
   /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
 
@@ -14,6 +15,23 @@ h2 {
 
 a {
   text-decoration: none;
+}
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1.5s;
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
 }
 
 /* Menu overview */
@@ -352,14 +370,15 @@ h2 {
   justify-content: center;
   align-items: center;
   gap: 5%;
+  margin-top: 7rem;
 }
 
 .cvSection {
   display: flex;
   justify-content: space-between;
   font-size: 24px;
-  margin-top: 5rem;
-  margin-bottom: 3rem;
+  margin-top: 11rem;
+  /* margin-bottom: 3rem; */
 }
 
 .cvSection h1 {
