--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
   font-optical-sizing: auto;
   background-color: black;
   scroll-behavior: smooth;
+  /* scroll-behavior: auto; */
   /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
 
