--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
   scroll-behavior: smooth;
   /* scroll-behavior: auto; */
   /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
+  min-width: 1260px;
 }
 
 h1,
@@ -234,7 +235,7 @@ a {
 
 .newBeginging img {
   /* position: absolute; */
-  width: 50%;
+  width: 950px;
   margin-top: 100px;
 }
 
@@ -243,8 +244,8 @@ a {
   /* background: #fea857; */
   background: radial-gradient(at right bottom, #fea857, #010101);
   position: absolute;
-  width: 50%;
-  height: 59%;
+  width: 950px;
+  height: 40rem;
   opacity: 0;
   transition: all 0.5s ease-in-out;
   border-radius: 30px;
@@ -259,7 +260,7 @@ a {
   padding-top: 100px;
   position: absolute;
   width: 50%;
-  top: 30%;
+  /* top: 30%; */
   left: 50%;
   text-align: center;
   /* padding: 0 1px; */
@@ -278,11 +279,13 @@ a {
   text-align: justify;
   /* text-align: center; */
   justify-content: center;
-  margin: 0 10% -250px 10%;
+  width: 700px;
+  margin: 0 auto -250px auto;
 }
 
 .text-details img {
-  width: 70%;
+  width: 700px;
+  height: auto;
   /* margin-top: 100px; */
 }
 
