--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ a {
 
 .text-details {
   position: absolute;
-  top: 70%;
+  top: 60%;
   left: 50%;
   width: 80%;
   transform: translate(-50%, -50%) rotateY(150deg);
@@ -264,6 +264,15 @@ a {
   transition: all 0.5s ease-in-out;
   z-index: 3;
   pointer-events: none;
+}
+
+.text-details h1 {
+  visibility: hidden;
+  font-size: 32px;
+}
+
+.text-details p {
+  font-size: 26px;
 }
 
 .text-details p,
@@ -285,11 +294,79 @@ a {
   position: relative;
   margin-top: -200px;
 }
+/* //////////////////////////////////// */
+.newBeginging2 {
+  position: relative;
+  max-width: fit-content;
+  margin: 0 auto;
+}
+.newBeginging2 img {
+  width: 1300px;
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+
+.text-overlay2 {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  width: 80%;
+  height: 60%;
+  background: radial-gradient(at right bottom, #6d6de8, #010101);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 2;
+  pointer-events: none;
+  border-radius: 50px;
+}
+
+.text-details2 {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  width: 80%;
+  transform: translate(-50%, -50%) rotateY(150deg);
+  opacity: 0;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  z-index: 3;
+  pointer-events: none;
+}
+
+.text-details2 h1 {
+  visibility: hidden;
+  font-size: 32px;
+}
+
+.text-details2 p {
+  position: relative;
+  font-size: 26px;
+  margin-top: -200px;
+  max-width: 100%;
+  pointer-events: none;
+}
+
+.newBeginging2:hover .text-overlay2 {
+  opacity: 1;
+}
+
+.newBeginging2:hover .text-details2 {
+  opacity: 1;
+  transform: translate(-50%, -50%) rotateY(0deg);
+}
+
+.text-details2 img {
+  position: relative;
+  max-width: 60%;
+  pointer-events: none;
+  margin-inline: auto;
+}
 
 /* Skill Page  */
 .skillsPage {
   position: relative;
-  top: 20vh;
+  top: 70vh;
   height: 100vh;
 }
 
@@ -379,7 +456,7 @@ ul {
 /* Hobby Page */
 .hobbyPage {
   position: relative;
-  top: 20vh;
+  top: 50vh;
   height: 100vh;
 }
 
@@ -403,7 +480,7 @@ h2 {
 /* Contact Page */
 .contactPage {
   position: relative;
-  top: 20vh;
+  top: 40vh;
   height: 100vh;
   /* background-image: linear-gradient(44deg, rgb(0, 0, 0) 88.2%, #fee2b4 115.6%); */
 }
@@ -432,7 +509,7 @@ h2 {
   justify-content: space-between;
   font-size: 24px;
   margin-top: 11rem;
-  /* margin-bottom: 3rem; */
+  margin-bottom: 3rem;
 }
 
 .cvSection h1 {
